<?xml version="1.0" encoding="utf-8"?>
<layout>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/dialogTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_new_password"
        android:textSize="20sp"
        android:textStyle="bold"
        android:paddingBottom="8dp" />

    <EditText
        android:id="@+id/newPasswordInputDialog"
        android:layout_width="269dp"
        android:layout_height="48dp"
        android:autofillHints=""
        android:hint="@string/enter_new_password"
        android:inputType="textPassword"
        android:textColorHint="#6B6273"
        android:padding="8dp" />

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="1dp"
        android:layout_marginStart="110dp">

        <Button
            android:id="@+id/addDialogButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="16dp"
            android:text="@string/add" />

        <Button
            android:id="@+id/cancelDialogButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="16dp"
            android:text="@string/cancel" />
    </LinearLayout>

</LinearLayout>
</layout>