<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <!-- Password Text -->
            <TextView
                android:id="@+id/passwordText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingHorizontal="10dp"
                android:paddingVertical="8dp"
                android:text="@string/invisible_password"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <!-- Password Input -->
            <EditText
                android:id="@+id/passwordInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/edit_old_password"
                android:inputType="textPassword"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@id/passwordText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_goneMarginTop="0dp" />

            <!-- Buttons Row -->
            <LinearLayout
                android:id="@+id/buttonRow"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="end"
                app:layout_constraintTop_toBottomOf="@+id/passwordInput"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_goneMarginTop="0dp"
                tools:ignore="UselessParent">

                <!-- Buttons -->
                <ImageButton
                    android:id="@+id/eyeButton"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:contentDescription="@string/eye_text"
                    android:src="@android:drawable/ic_menu_view" />

                <ImageButton
                    android:id="@+id/editButton"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:contentDescription="@string/edit_text"
                    android:src="@android:drawable/ic_menu_edit" />

                <ImageButton
                    android:id="@+id/saveButton"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:visibility="gone"
                    android:contentDescription="@string/save_text"
                    android:src="@android:drawable/ic_menu_save" />

                <ImageButton
                    android:id="@+id/deleteButton"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:contentDescription="@string/delete_text"
                    android:src="@android:drawable/ic_menu_delete" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>
</layout>