<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/appTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="cursive"
            android:text="@string/my_locker"
            android:textColor="#F44336"
            android:textSize="70sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/switchButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.627"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.622" />

        <Switch
            android:id="@+id/switchButton"
            android:layout_width="95dp"
            android:layout_height="60dp"
            android:layout_marginBottom="40dp"
            app:layout_constraintBottom_toTopOf="@+id/serviceStatus"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <Button
            android:id="@+id/passwordManagerButton"
            android:layout_width="296dp"
            android:layout_height="63dp"
            android:layout_marginBottom="28dp"
            android:text="@string/password_manager"
            app:layout_constraintBottom_toTopOf="@+id/historyButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/serviceStatus"
            android:layout_width="240dp"
            android:layout_height="40dp"
            android:layout_marginBottom="56dp"
            android:text=""
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="Status is OFF" />

        <Button
            android:id="@+id/historyButton"
            android:layout_width="296dp"
            android:layout_height="68dp"
            android:layout_marginBottom="40dp"
            android:text="@string/lock_history"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout"
            style="?android:attr/buttonBarStyle"
            android:layout_width="356dp"
            android:layout_height="72dp"
            android:layout_marginBottom="64dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/passwordManagerButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <Button
                android:id="@+id/lockButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="77dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/lock_screen" />

            <Button
                android:id="@+id/alarmButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="57dp"
                android:layout_height="72dp"
                android:layout_weight="1"
                android:text="@string/alarm_lock" />
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>